--- a/src/fonts.css
+++ b/src/fonts.css
@@ -1,10 +1,10 @@
 /* src/fonts.css */
 @font-face {
-    font-family: 'BlendingFont';
-    src: url('./fonts/Blending-rgjzK.otf') format('truetype'); /* Adjust the path and format according to your font file */
+    font-family: 'NotoSans';
+    src: url('./fonts/Noto_Sans.otf') format('truetype'); /* Adjust the path and format according to your font file */
   }
   
   body {
-    font-family: 'BlendingFont', sans-serif;
+    font-family: 'NotoSans', sans-serif;
   }
   
